[tool.poetry]
name = "bby"
version = "0.1.0"
description = "Scrape product info from bestbuy.com."
authors = ["jonxola"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
